k8s/manifests/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: mdasif74/python-redis-app
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred # if you need imagePullSecrets, otherwise remove this
