k8s/manifests/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: your_nginx_image:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred # if you need imagePullSecrets, otherwise remove this
