k8s/manifests/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: python-redis
  labels:
    app: python-redis
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: python-redis
  type: ClusterIP
